--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  </head>
   <body>
     <h1>matlock.dev</h1>
     
