--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>matlock.dev</h1>
-    <h2>Hi! welcome to my website!</h2>
+    <h2>Hi! Welcome to my website!</h2>
     
   </body>
 </html>
