--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="images/myfavicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/myfavicon.ico" type="image/x-icon">
   </head>
   <body>
     <h1>matlock.dev</h1>
