added title to homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>matlock.dev Homepage</title>
     <link rel="icon" href="images/myfavicon.ico" type="image/x-icon">
   </head>
   <body>
