added icon image to homepage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="images/myfavicon.ico" type="image/x-icon">
   </head>
   <body>
+    <img src="images/myfavicon.ico" alt="could not display icon">
     <h1>matlock.dev</h1>
     
     
