visual changes I made a while ago

--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matlock.dev Projects</title>
+    <title>Projects</title>
 </head>
-<body>
+<body style="background-color: darkseagreen;">
     <h1>matlock.dev</h1>
+
+    <hr>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -15,5 +18,14 @@
         <li><a href="plans.html">Plans</a></li>
       </ul>
     </nav>
+
+    <hr>
+
+    <h2>Projects</h2>
+    <p>
+      - This is where I will list all of my projects and link to them<br>
+      - I will also include a brief description of each project<br>
+      - I will also include a link to the github repo for each project<br>
+      - and more...
 </body>
 </html>
