--- a/plans.html
+++ b/plans.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>matlock.dev Plans</title>
+    <title>Plans</title>
 </head>
-<body>
+<body style="background-color: darkseagreen;">
     <h1>matlock.dev</h1>
+
+    <hr>
+
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -16,7 +19,9 @@
       </ul>
     </nav>
     
-    <h2>PLANS:</h2>
+    <hr>
+
+    <h2>Plans</h2>
     <h3>Visual/Navigation/UX</h3>
     <p>
       - find a cool theme for the website (colours, fonts, art, animations)<br>
