revert to a clean slate

--- a/index.html
+++ b/index.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homepage</title>
-    <link rel="icon" href="images/myfavicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body style="background-color: darkseagreen;">
-    <h1>matlock.dev</h1>
-    
-    <hr>
+	<head>
+		<meta charset="UTF-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<title>Homepage</title>
+    	<link rel="stylesheet" href="style.css">
+ 	</head>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="plans.html">Plans</a></li>
-      </ul>
-    </nav>
-    
-    <hr>
+	<script src="index.js"></script>
 
-    <h2>Welcome to my website project!</h2>
-    <p title="this is a tooltip o_o">
-      This is my first website and I'm planning on using it as a portfolio<br> 
-      and a place to experiment and practice with web dev. Im going to use<br>
-      the front page as a 'todo' list of sorts where I share what I plan<br>
-      to do with my website. If your reading this, you probably know me so<br>
-      please give me some ideas or feedback!
-    </p>
-  </body>
+	<body>
+		<header>
+			<a class="logo-text">matlock.dev</a>
+		</header>
+	</body>
 </html>
