--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-</head>
-<body style="background-color: darkseagreen;">
-    <h1>matlock.dev</h1>
+	<head>
+		<meta charset="UTF-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<title>Projects</title>
+    	<link rel="stylesheet" href="style.css">
+ 	</head>
 
-    <hr>
+	<script src="index.js"></script>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="plans.html">Plans</a></li>
-      </ul>
-    </nav>
-
-    <hr>
-
-    <h2>Projects</h2>
-    <p>
-      - This is where I will list all of my projects and link to them<br>
-      - I will also include a brief description of each project<br>
-      - I will also include a link to the github repo for each project<br>
-      - and more...
-</body>
+	<body>
+		<header>
+			<a class="logo-text">matlock.dev</a>
+		</header>
+	</body>
 </html>
