--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     	<link rel="stylesheet" href="style.css">
  	</head>
 
-	<script src="index.js"></script>
+	<script src="main.js"></script>
+
 
 	<body>
 		<header>
