--- a/plans.html
+++ b/plans.html
@@ -7,7 +7,7 @@
     	<link rel="stylesheet" href="style.css">
  	</head>
 
-	<script src="index.js"></script>
+	<script src="main.js"></script>
 
 	<body>
 		<header>
