foundation for new look

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     	<title>Homepage</title>
     	<link rel="stylesheet" href="style.css">
  	</head>
-
-	<script src="main.js"></script>
-
-
 	<body>
+
+		<canvas id="three-canvas"></canvas>
+
+		<script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.min.js"></script>
+		<script src="3d.js"></script>
+		<script src="main.js"></script>
+
+
 		<header>
-			<a class="logo-text">matlock.dev</a>
+			<a class="logo-text" href="index.html">matlock.dev - coming soon...</a>
 		</header>
 	</body>
 </html>
