updated deprecated import method

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 	<body>
 
 		<canvas id="three-canvas"></canvas>
-
-		<script src="https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.min.js"></script>
-		<script src="3d.js"></script>
+		<script type="importmap">
+			{
+				"imports": {
+					"three": "https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.module.js",
+					"three/addons/": "https://cdn.jsdelivr.net/npm/three@0.153.0/examples/jsm/"
+				}
+			}
+		</script>
+		<script type="module" src="3d.js"></script>
 		<script src="main.js"></script>
 
 
