added nav bar and headline entry boxes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<title>Homepage</title>
+    	<title>homepage</title>
     	<link rel="stylesheet" href="style.css">
 
 		<script type="importmap">
@@ -21,8 +21,17 @@
 	<body>
 
 		<canvas id="three-canvas"></canvas>
-		
-		<h1>matlock.dev</h1>
+
+		<div class="nav-bar">
+			<a class="nav-bar__logo" href="index.html">matlock.dev</a>
+			<ul class="nav-bar__links">
+				<li><a class="nav-bar__link" href="index.html">home</a></li>
+				<li><a class="nav-bar__link" href="about.html">about</a></li>
+				<li><a class="nav-bar__link" href="projects.html">projects</a></li>
+				<li><a class="nav-bar__link" href="contact.html">contact</a></li>
+			</ul>
+		</div>
+
 
 		<div class="scroller">
 			<ul class="scroller-content scroller__inner">
@@ -30,8 +39,16 @@
 				<li>▼▼</li>
 				<li>homepage</li>
 				<li>▼▼</li>
-
 			</ul>
+		</div>
+
+		<div class="headline-entry-container">
+			<div class="headline-entry"></div>
+			<div class="headline-entry"></div>
+			<div class="headline-entry"></div>
+			<div class="headline-entry"></div>
+			<div class="headline-entry"></div>
+			<div class="headline-entry"></div>
 		</div>
 
 	</body>
