--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<title>about</title>
+    	<title>contact</title>
     	<link rel="stylesheet" href="style.css">
 
 		<script type="importmap">
@@ -37,7 +37,7 @@
 			<ul class="scroller-content scroller__inner">
 				<li>matlock.dev</li>
 				<li>▼▼</li>
-				<li>about</li>
+				<li>contact</li>
 				<li>▼▼</li>
 			</ul>
 		</div>
